--- a/project_technologies.json
+++ b/project_technologies.json
@@ -1,13 +1,14 @@
 {
     "technologies": {
         "apis": [
-            "insert apis"
         ],
         "platforms": [
-            "insert platforms"
+            "Google Cloud Storage",
+            "Android OS"
         ],
         "toolkits": [
-            "insert toolkits"
+            "three.js",
+            "opencv"
         ]
     },
     "themes": [
